--- a/css/stylesheets-index.css
+++ b/css/stylesheets-index.css
@@ -44,6 +44,7 @@ img{
     margin: 50px;
     height: 70%;
     width: 70%;
+    border-radius: 20px;
 }
 
 a:link, a:visited{
@@ -56,7 +57,7 @@ a:hover, a:active{
 
 .description{
     margin: 20px;
-    padding 10ox;
+    padding 10px;
     font-size: 30px;
     color:beige
 }
